# openwrt_cmake_hello_world

./: Makefile  README.md  cmake_linux.sh  cmake_openwrt.sh  init.d-hello_world
openwrt-xmap-webui/: Makefile
openwrt-xmap-webui/etc/config/: luci-xmap
openwrt-xmap-webui/etc/init.d/: xmap-webui
openwrt-xmap-webui/etc/xmap/: luci-xmap.sh  xmap-webui.config
openwrt-xmap-webui/src/: CMakeLists.txt  main.cpp
openwrt-xmap-webui/src/lib/: CMakeLists.txt
openwrt-xmap-webui/src/lib/print_msg/: encoding.c  encoding.h  print_msg.c  print_msg.h
openwrt-xmap-webui/src/src/: CMakeLists.txt
openwrt-xmap-webui/usr/lib/lua/luci/controller/: luci-xmap.lua
openwrt-xmap-webui/usr/lib/lua/luci/model/cbi/admin_xmap/: luci-xmap.lua
src/: CMakeLists.txt  hello_world.c
