message(-> src目录)
#所有的路径变量都不允许重名

#增加其它编译选项
add_definitions("-lpthread")
#增加GDB调试编译选项
add_definitions("-Wall -g")

AUX_SOURCE_DIRECTORY(. BINROOT_SRC_LIST)
AUX_SOURCE_DIRECTORY(cfgProc BINROOT_SRC_LIST)
AUX_SOURCE_DIRECTORY(eleCondition BINROOT_SRC_LIST)
AUX_SOURCE_DIRECTORY(ele_core BINROOT_SRC_LIST)
AUX_SOURCE_DIRECTORY(KitRuntime BINROOT_SRC_LIST)
AUX_SOURCE_DIRECTORY(mqtt_client BINROOT_SRC_LIST)
AUX_SOURCE_DIRECTORY(DeviceLayered BINROOT_SRC_LIST)
AUX_SOURCE_DIRECTORY(UserNetServer BINROOT_SRC_LIST)
AUX_SOURCE_DIRECTORY(reg_lua BINROOT_SRC_LIST)
AUX_SOURCE_DIRECTORY(subsystem BINROOT_SRC_LIST)
AUX_SOURCE_DIRECTORY(msd-u BINROOT_SRC_LIST)
AUX_SOURCE_DIRECTORY(log BINROOT_SRC_LIST)
AUX_SOURCE_DIRECTORY(unzip BINROOT_SRC_LIST)

#设置成静态库
ADD_LIBRARY(src ${BINROOT_SRC_LIST})
